2010-01-06  Dan Bernstein  <mitz@apple.com>

        Reviewed by Sam Weinig.

        <rdar://problem/7488126> With text-rendering: optimizelegibility, sometimes lines run too long
        https://bugs.webkit.org/show_bug.cgi?id=32794

        * platform/mac/fast/text/line-breaking-with-kerning-expected.checksum: Added.
        * platform/mac/fast/text/line-breaking-with-kerning-expected.png: Added.
        * platform/mac/fast/text/line-breaking-with-kerning-expected.txt: Added.
        * platform/mac/fast/text/line-breaking-with-kerning.html: Added.

2010-01-06  Eric Seidel  <eric@webkit.org>

        No review.

        REGRESSION(52854?) fast/workers/shared-worker-constructor.html failed on Leopard Build Bot
        https://bugs.webkit.org/show_bug.cgi?id=33256

        I am unable to reproduce this failure locally, so this fix is only speculative.
        Skip the test we believe is causing the log message which bleeds into fast/workers/shared-worker-constructor.html

        * platform/mac/Skipped:

2010-01-06  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        LayoutTests/fast/css/transition-color-unspecified.html is still flaky
        https://bugs.webkit.org/show_bug.cgi?id=33282

        I think this setTimeout should be sufficient to deflake it.
        The other transitions tests have a timeout of 0 to 
        give time for hardware accelerated transitions.

        * fast/css/transition-color-unspecified.html:

2010-01-06  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Carlson.

        media/video-seeking.html is flaky
        https://bugs.webkit.org/show_bug.cgi?id=33273

        Removed setTimeouts from this test. It kind of looks
        like they were intentional, but I don't see how they add
        anything to this test (other than race conditions).

        * media/video-seeking-expected.txt:
        * media/video-seeking.html:

2010-01-06  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.
