@@ -114,6 +114,7 @@ namespace WebCore {
         RefPtr<ThreadableLoader> m_loader;
         Timer<EventSource> m_reconnectTimer;
         Vector<UChar> m_receiveBuf;
+        bool m_discardTrailingNewline;
         bool m_failSilently;
         bool m_requestInFlight;
 
