@@ -1,3 +1,15 @@
+2010-01-06  Adam Bergkvist  <adam.bergkvist@ericsson.com>
+
+        Reviewed by Darin Adler.
+
+        Modified EventSource event-stream parser to support a single CR as line ending.
+        Updated test accordingly.
+        https://bugs.webkit.org/show_bug.cgi?id=33207
+
+        * http/tests/eventsource/eventsource-parse-event-stream-expected.txt:
+        * http/tests/eventsource/eventsource-parse-event-stream.html:
+        * http/tests/eventsource/resources/event-stream.php:
+
 2010-01-06  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Sam Weinig.
